Updated question and answer text

--- a/Neff/MC/68830_HP_C04.html
+++ b/Neff/MC/68830_HP_C04.html
@@ -41,7 +41,7 @@
                                                                     "order": "ordered",
                                                                     "presenterType": "RadioGroup",
                                                                     "presenterConfig": {"numberFormat": ""},
-                                                                    "question": "Which of the following attributes describes Country A",
+                                                                    "question": "Which of the following attributes describes Country A?",
                                                                     "choices":
                                                                             [
                                                                                 {
@@ -62,7 +62,7 @@
                                                                                 },
 
 																				{
-                                                                                    "content": "A and D",
+                                                                                    "content": "A very high dependency ratio due to a young population AND high instance of deaths from preventable disease",
                                                                                     "answerKey": "answer5"
                                                                                 }
 
