--- a/Neff/MC/68830_HP_C05.html
+++ b/Neff/MC/68830_HP_C05.html
@@ -62,7 +62,7 @@
                                                                                 },
 
 																				{
-                                                                                    "content": "B and D",
+                                                                                    "content": "High instance of deaths from preventable disease AND high childhood mortality",
                                                                                     "answerKey": "answer5"
                                                                                 }
 
