--- a/Neff/MC/68830_HP_C08.html
+++ b/Neff/MC/68830_HP_C08.html
@@ -41,7 +41,7 @@
                                                                     "order": "randomized",
                                                                     "presenterType": "RadioGroup",
                                                                     "presenterConfig": {"numberFormat": ""},
-                                                                    "question": "In the demographic transition model, why do birth rates changes lag changes in death rates?",
+                                                                    "question": "In the demographic transition model, why do birth rate changes lag changes in death rates?",
                                                                     "choices":
                                                                             [
                                                                                 {
