--- a/Neff/MC/68830_HP_M01_01.html
+++ b/Neff/MC/68830_HP_M01_01.html
@@ -49,7 +49,7 @@
 														"answerKey": "answer1"
 													},
 													{
-														"content": "Because the total fertility rate increases with population",
+														"content": "Because the total fertility rate increases with population size",
 														"answerKey": "answer2"
 													},
 													{
