--- a/Neff/MC/68830_HP_M04_01.html
+++ b/Neff/MC/68830_HP_M04_01.html
@@ -45,7 +45,7 @@
 											"choices":
 												[
 													{
-														"content": "Most people die of diseases related to preventable and treatable diseases such as respiratory tract infections.",
+														"content": "Most people die of preventable and treatable diseases such as infectious and parasitic diseases.",
 														"answerKey": "answer1"
 													},
 													{
