--- a/Neff/MC/68830_HP_M07_04.html
+++ b/Neff/MC/68830_HP_M07_04.html
@@ -41,7 +41,7 @@
 											"order": "randomized",
 											"presenterType": "RadioGroup",
 											"presenterConfig": { "numberFormat": "" },
-											"question": "Enter conditions that you would expect for the United States. You can find these conditions in the chapter. With these assumptions, how would you expect the U.S. population to change (based on the results of the simulation)?",
+											"question": "With these assumptions, how would you expect the U.S. population to change (based on the results of the simulation)?",
 											"choices":
 												[
 													{
