--- a/Manza/Other/journal20.html
+++ b/Manza/Other/journal20.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b21cf0db364ac4594a5288a06cf4e0a9d"></div>
+    <div id="bde1e1b6c5f6f49ba9958d55c8eb1a796"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -27,15 +27,15 @@
 	pearson.brix.activity = {};
 	var a = pearson.brix.activity;
 
-	// The activity config that defines the brix and mortar for this page 
+	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Sociological Definitions of Race and Ethnicity Journal",
+			"description": "11.1 Summary, What is the Difference between Race and Ethnicity? Journal",
 			"containerConfig":
 				[
 					{
-						"description": "How do contemporary sociologists define race and ethnicity?",
-						"containerId": "b21cf0db364ac4594a5288a06cf4e0a9d",
+						"description": "Think about your friends and other people (not family members) you are in contact with regularly. How do you (or would you) characterize the race and ethnicity of these people? Do you use primarily racial or ethnic terms, or both? Discuss a few individuals from this group (don&#x2019;t use real names) whose racial and/or ethnic identity seems ambiguous. How do others characterize their race? How do they characterize it themselves (you can ask if necessary)?",
+						"containerId": "bde1e1b6c5f6f49ba9958d55c8eb1a796",
 						"brixConfig":
 							[
 								{
@@ -44,7 +44,7 @@
 									"config":
 										{
 											"id": "sampleJ1",
-                                            "title": "How do contemporary sociologists define race and ethnicity?"
+                                            "title": "Think about your friends and other people (not family members) you are in contact with regularly. How do you (or would you) characterize the race and ethnicity of these people? Do you use primarily racial or ethnic terms, or both? Discuss a few individuals from this group (don&#x2019;t use real names) whose racial and/or ethnic identity seems ambiguous. How do others characterize their race? How do they characterize it themselves (you can ask if necessary)?"
 										},
 									"configFixup":
                                         [
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#b21cf0db364ac4594a5288a06cf4e0a9d" }
+											{ "type": "d3select", "selector": "#bde1e1b6c5f6f49ba9958d55c8eb1a796" }
 										]
 								}
 							]
