--- a/Manza/Other/journal21.html
+++ b/Manza/Other/journal21.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b21cf0db364ac4594a5288a06cf4e0a9d"></div>
+    <div id="b9006a123347c48b7af5dc95ce8058270"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -27,15 +27,15 @@
 	pearson.brix.activity = {};
 	var a = pearson.brix.activity;
 
-	// The activity config that defines the brix and mortar for this page 
+	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Sociological Definitions of Race and Ethnicity Journal",
+			"description": "11.2 Summary, Is Race Real? Journal",
 			"containerConfig":
 				[
 					{
-						"description": "How do contemporary sociologists define race and ethnicity?",
-						"containerId": "b21cf0db364ac4594a5288a06cf4e0a9d",
+						"description": "Here is a statement about the impact of ethnic identity (perhaps you have heard some version of this about someone you know): &#x201c;Joe has a fiery temper because he is from Italian stock.&#x201d; As we&#x2019;ve seen, sociologists would not agree with that statement. How would you try to convince someone that it is not really a good way of understanding Joe&#x2019;s &#x201c;fiery temper&#x201d;?",
+						"containerId": "b9006a123347c48b7af5dc95ce8058270",
 						"brixConfig":
 							[
 								{
@@ -44,7 +44,7 @@
 									"config":
 										{
 											"id": "sampleJ1",
-                                            "title": "How do contemporary sociologists define race and ethnicity?"
+                                            "title": "Here is a statement about the impact of ethnic identity (perhaps you have heard some version of this about someone you know): &#x201c;Joe has a fiery temper because he is from Italian stock.&#x201d; As we&#x2019;ve seen, sociologists would not agree with that statement. How would you try to convince someone that it is not really a good way of understanding Joe&#x2019;s &#x201c;fiery temper&#x201d;?"
 										},
 									"configFixup":
                                         [
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#b21cf0db364ac4594a5288a06cf4e0a9d" }
+											{ "type": "d3select", "selector": "#b9006a123347c48b7af5dc95ce8058270" }
 										]
 								}
 							]
