--- a/Manza/Other/journal22.html
+++ b/Manza/Other/journal22.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b21cf0db364ac4594a5288a06cf4e0a9d"></div>
+    <div id="bd60a4c86539f4e36be098ca52f3cd7b7"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -27,15 +27,15 @@
 	pearson.brix.activity = {};
 	var a = pearson.brix.activity;
 
-	// The activity config that defines the brix and mortar for this page 
+	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Sociological Definitions of Race and Ethnicity Journal",
+			"description": "11.3 Summary, Does Racism Still Exist in the United States? Journal",
 			"containerConfig":
 				[
 					{
-						"description": "How do contemporary sociologists define race and ethnicity?",
-						"containerId": "b21cf0db364ac4594a5288a06cf4e0a9d",
+						"description": "In France, the national government has banned the use of race in public policy, and the French Census cannot even ask people about their race and ethnicity. Officially, the government has long attempted to make France a &#x201c;color-blind&#x201d; society. Yet France has an increasingly diverse society with high levels of immigration from North Africa and other countries around the world that were once colonized by France. What impact do you think such &#x201c;color-blind&#x201d; policies might have? In what ways might they tend to reduce racism, or tensions between minority and majority groups? Are there ways that they might increase tensions or expression of racist attitudes?",
+						"containerId": "bd60a4c86539f4e36be098ca52f3cd7b7",
 						"brixConfig":
 							[
 								{
@@ -44,7 +44,7 @@
 									"config":
 										{
 											"id": "sampleJ1",
-                                            "title": "How do contemporary sociologists define race and ethnicity?"
+                                            "title": "In France, the national government has banned the use of race in public policy, and the French Census cannot even ask people about their race and ethnicity. Officially, the government has long attempted to make France a &#x201c;color-blind&#x201d; society. Yet France has an increasingly diverse society with high levels of immigration from North Africa and other countries around the world that were once colonized by France. What impact do you think such &#x201c;color-blind&#x201d; policies might have? In what ways might they tend to reduce racism, or tensions between minority and majority groups? Are there ways that they might increase tensions or expression of racist attitudes?"
 										},
 									"configFixup":
                                         [
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#b21cf0db364ac4594a5288a06cf4e0a9d" }
+											{ "type": "d3select", "selector": "#bd60a4c86539f4e36be098ca52f3cd7b7" }
 										]
 								}
 							]
