--- a/Manza/Other/journal23.html
+++ b/Manza/Other/journal23.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b21cf0db364ac4594a5288a06cf4e0a9d"></div>
+    <div id="bc4a0cdad06834264a1e5580a4be01f2a"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -27,15 +27,15 @@
 	pearson.brix.activity = {};
 	var a = pearson.brix.activity;
 
-	// The activity config that defines the brix and mortar for this page 
+	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Sociological Definitions of Race and Ethnicity Journal",
+			"description": "11.4 Summary, Do Race and Ethnicity Matter Anymore? Journal",
 			"containerConfig":
 				[
 					{
-						"description": "How do contemporary sociologists define race and ethnicity?",
-						"containerId": "b21cf0db364ac4594a5288a06cf4e0a9d",
+						"description": "The following argument is often made: &#x201c;Irish, Italian, Polish, Jews, and other European immigrant groups once faced discrimination and racism, but they overcame it through hard work and a determination to fit in. Blacks and Hispanics should do the same thing.&#x201d; How would you assess this argument? What is the evidence that minorities today face different barriers than European immigrants 100 years ago?",
+						"containerId": "bc4a0cdad06834264a1e5580a4be01f2a",
 						"brixConfig":
 							[
 								{
@@ -44,7 +44,7 @@
 									"config":
 										{
 											"id": "sampleJ1",
-                                            "title": "How do contemporary sociologists define race and ethnicity?"
+                                            "title": "The following argument is often made: &#x201c;Irish, Italian, Polish, Jews, and other European immigrant groups once faced discrimination and racism, but they overcame it through hard work and a determination to fit in. Blacks and Hispanics should do the same thing.&#x201d; How would you assess this argument? What is the evidence that minorities today face different barriers than European immigrants 100 years ago?"
 										},
 									"configFixup":
                                         [
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#b21cf0db364ac4594a5288a06cf4e0a9d" }
+											{ "type": "d3select", "selector": "#bc4a0cdad06834264a1e5580a4be01f2a" }
 										]
 								}
 							]
