--- a/Manza/Other/journal24.html
+++ b/Manza/Other/journal24.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b21cf0db364ac4594a5288a06cf4e0a9d"></div>
+    <div id="b6c77215489b34dde93dee27b509116d9"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -27,15 +27,15 @@
 	pearson.brix.activity = {};
 	var a = pearson.brix.activity;
 
-	// The activity config that defines the brix and mortar for this page 
+	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Sociological Definitions of Race and Ethnicity Journal",
+			"description": "11.5 Summary, How are Race and Ethnicity Changing in the Twenty-First Century? Journal",
 			"containerConfig":
 				[
 					{
-						"description": "How do contemporary sociologists define race and ethnicity?",
-						"containerId": "b21cf0db364ac4594a5288a06cf4e0a9d",
+						"description": "Some people are optimistic about the future of race and ethnic relations in the United States, while others are more pessimistic. What do you think are the best reasons for optimism that America will eventually overcome its racial and ethnic divide? On the other hand, what factors give you concern about the future, as far as racial and ethnic inequalities are concerned?",
+						"containerId": "b6c77215489b34dde93dee27b509116d9",
 						"brixConfig":
 							[
 								{
@@ -44,7 +44,7 @@
 									"config":
 										{
 											"id": "sampleJ1",
-                                            "title": "How do contemporary sociologists define race and ethnicity?"
+                                            "title": "Some people are optimistic about the future of race and ethnic relations in the United States, while others are more pessimistic. What do you think are the best reasons for optimism that America will eventually overcome its racial and ethnic divide? On the other hand, what factors give you concern about the future, as far as racial and ethnic inequalities are concerned?"
 										},
 									"configFixup":
                                         [
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#b21cf0db364ac4594a5288a06cf4e0a9d" }
+											{ "type": "d3select", "selector": "#b6c77215489b34dde93dee27b509116d9" }
 										]
 								}
 							]
