--- a/Manza/Other/IN_11.3.3a.html
+++ b/Manza/Other/IN_11.3.3a.html
@@ -52,7 +52,7 @@
 													"orientation": "left",
 													"ticks": [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100],
 													"label": "Percentage (%)"
-												},
+												}
 										},
                                     "configFixup":
                                         [
@@ -71,7 +71,7 @@
 											"id": "legendSchools",
 											"type": "line",
 											"xPos": "right",
-											"yPos": "top",
+											"yPos": "top"
 										},
 									 "configFixup":
                                         [
@@ -98,7 +98,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 400, "width": 600},
+											"maxSize": {"height": 400, "width": 600}
 										},
 									"configFixup":
                                         [
@@ -122,7 +122,7 @@
                                     "config":
                                         {
                                             "eventDetailsProperty": "index",
-                                            "dataPropertySetter": "setData",
+                                            "dataPropertySetter": "setData"
                                         },
                                     "configFixup":
                                         [
@@ -164,7 +164,7 @@
                                     "config":
                                         {
                                             "eventDetailsProperty": "index",
-                                            "dataPropertySetter": "setLabels",
+                                            "dataPropertySetter": "setLabels"
                                         },
                                     "configFixup":
                                         [
@@ -447,7 +447,7 @@
                      "neighborhoodsLegend":
                         [
                                 {"content": "Disagree"}, 
-                                {"content": "Agree"},
+                                {"content": "Agree"}
 
                         ],
 					"neighborhoods":
