--- a/Manza/Other/IN_11.4.9.html
+++ b/Manza/Other/IN_11.4.9.html
@@ -49,7 +49,7 @@
 												{
 													"type": "ordinal",
 													"orientation": "left"
-												},
+												}
 										},
                                     "configFixup":
                                         [
@@ -76,7 +76,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 400, "width": 579},
+											"maxSize": {"height": 400, "width": 579}
 										},
 									"configFixup":
                                         [
@@ -100,7 +100,7 @@
                                     "config":
                                         {
                                             "eventDetailsProperty": "index",
-                                            "dataPropertySetter": "setData",
+                                            "dataPropertySetter": "setData"
                                         },
                                     "configFixup":
                                         [
@@ -195,7 +195,7 @@
                                                     {"cols":["<strong>Rates of HIV Infection of Persons Over 13 Years of Age per 100,000 in 2008</strong>", 
                                                         "Blacks have by far the highest rates of HIV infection among any racial or ethnic group in the United States. The rate of HIV infection among African Americans is about 10 times the rate for whites and Asians and about 3 times the rate for Hispanics. "]},
                                                     {"cols": ["<strong>Rates of Infant Mortality per 100,000 in 2006</strong>", "African Americans have the highest rate of infant mortality in the United States, a rate that is more than double that of whites, Asians, and Hispanics."]},
-                                                    {"cols": ["<strong>Homicide Rates per 100,000 in 2007</strong>", "One of the most striking disparities in mortality is in the area of homicide. For example, in 2007 the homicide rate for black males was over 10 times the rate for white and Asian males and about 4 times the rate for Latinos and Native Americans."]},
+                                                    {"cols": ["<strong>Homicide Rates per 100,000 in 2007</strong>", "One of the most striking disparities in mortality is in the area of homicide. For example, in 2007 the homicide rate for black males was over 10 times the rate for white and Asian males and about 4 times the rate for Latinos and Native Americans."]}
                                                 ]
                                         }
                                 }
@@ -283,7 +283,7 @@
                                 { "y": "Whites",    "x": 5.58 },
                                 { "y": "Blacks",    "x": 13.36 },
                                 { "y": "Hispanics", "x": 5.41 },
-                                { "y": "Asians",    "x": 4.55 },
+                                { "y": "Asians",    "x": 4.55 }
 
                             ]
                         ],
@@ -293,7 +293,7 @@
                     			{ "y": "Whites",    "x": 2.7 },   
                                 { "y": "Blacks",    "x": 23.1 },  
                                 { "y": "Hispanics", "x": 7.6 },
-                                { "y": "Asians",    "x": 2.4 },
+                                { "y": "Asians",    "x": 2.4 }
 
     						]
                         ]
