--- a/Manza/Other/journal02.html
+++ b/Manza/Other/journal02.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b21cf0db364ac4594a5288a06cf4e0a9d"></div>
+    <div id="b51a071f311d34e3da441fb975cf404f0"></div>
     <script src="js/d3.v3.min.js"></script>
 
 	
@@ -27,15 +27,15 @@
 	pearson.brix.activity = {};
 	var a = pearson.brix.activity;
 
-	// The activity config that defines the brix and mortar for this page 
+	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Sociological Definitions of Race and Ethnicity Journal",
+			"description": "Key Distinctions between Race and Ethnicity Journal",
 			"containerConfig":
 				[
 					{
-						"description": "How do contemporary sociologists define race and ethnicity?",
-						"containerId": "b21cf0db364ac4594a5288a06cf4e0a9d",
+						"description": "Which matters more, race or ethnicity?",
+						"containerId": "b51a071f311d34e3da441fb975cf404f0",
 						"brixConfig":
 							[
 								{
@@ -44,7 +44,7 @@
 									"config":
 										{
 											"id": "sampleJ1",
-                                            "title": "How do contemporary sociologists define race and ethnicity?"
+                                            "title": "Which matters more, race or ethnicity?"
 										},
 									"configFixup":
                                         [
@@ -79,7 +79,7 @@
 									"methodName": "draw",
 									"args":
 										[
-											{ "type": "d3select", "selector": "#b21cf0db364ac4594a5288a06cf4e0a9d" }
+											{ "type": "d3select", "selector": "#b51a071f311d34e3da441fb975cf404f0" }
 										]
 								}
 							]
