removed &nbsp; tags and replaced with <br />

--- a/Marin/Other/E3.1.html
+++ b/Marin/Other/E3.1.html
@@ -76,7 +76,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "The process of sensory coding involves three basic steps. &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;" }
+                                                                                "value": { "type": "constant", "value": "The process of sensory coding involves three basic steps. <br /><br /><br />" }
                                                                             },
                                                                             {
                                                                                 "name": "selectorLabel",
