--- a/Marin/Other/E3.27.html
+++ b/Marin/Other/E3.27.html
@@ -76,7 +76,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Objects that are close together in space or time are grouped together. Would you describe these patterns as rows or columns? Your answer is most likely columns. Because the dots are grouped together vertically, we perceive them as columns. &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;" }
+                                                                                "value": { "type": "constant", "value": "Objects that are close together in space or time are grouped together. Would you describe these patterns as rows or columns? Your answer is most likely columns. Because the dots are grouped together vertically, we perceive them as columns. <br /><br />" }
                                                                             },
                                                                             {
                                                                                 "name": "selectorLabel",
