Correcting <br> tags

--- a/Manza/Other/IN_11.3.3a.html
+++ b/Manza/Other/IN_11.3.3a.html
@@ -338,9 +338,9 @@
                                             "id": "callme",
                                             "textBits":
                                                 [
-                                                    {"cols": ["<b>Survey Question Asked:</b><br>Do you approve or disapprove of racial intermarriage?"]},
-                                                    {"cols": ["<b>Survey Question Asked:</b><br>Do you think white people and black/negroes should go to the same schools or separate schools?"]},
-                                                    {"cols": [ "<b>Survey Question Asked:</b><br>Do you agree or disagree with the statement: White people have a right to keep (Negroes/blacks/African Americans) out of their neighborhoods if they want to, and (Negroes/blacks/African Americans) should respect that right."]}
+                                                    {"cols": ["<b>Survey Question Asked:</b><br />Do you approve or disapprove of racial intermarriage?"]},
+                                                    {"cols": ["<b>Survey Question Asked:</b><br />Do you think white people and black/negroes should go to the same schools or separate schools?"]},
+                                                    {"cols": [ "<b>Survey Question Asked:</b><br />Do you agree or disagree with the statement: White people have a right to keep (Negroes/blacks/African Americans) out of their neighborhoods if they want to, and (Negroes/blacks/African Americans) should respect that right."]}
                                                 ]
                                         }
                                 }
