--- a/Manza/Other/IN_11.3.3b.html
+++ b/Manza/Other/IN_11.3.3b.html
@@ -338,9 +338,9 @@
                                             "id": "callme",
                                             "textBits":
                                                 [
-                                                    {"cols": ["<b>Survey Question Asked:</b><br> On the average, (Negroes/blacks/African Americans) have worse jobs, income, and housing than white people. Do you think these differences are...because most (Negroes/blacks/African Americans) just don't have the motivation or will power to pull themselves out of poverty?"]},
-                                                    {"cols": ["<b>Survey Question Asked:</b><br>Do you agree or disagree with the statement: It's really a matter of some people not trying hard enough; if blacks would only try harder they could be just as well off as white."]},
-                                                    {"cols": ["<b>Survey Question Asked:</b><br>Do you agree or disagree with the statement: Irish, Italians, Jewish and many other minorities overcame prejudice and worked their way up. Blacks should do the same without any special favors."]}
+                                                    {"cols": ["<b>Survey Question Asked:</b><br /> On the average, (Negroes/blacks/African Americans) have worse jobs, income, and housing than white people. Do you think these differences are...because most (Negroes/blacks/African Americans) just don't have the motivation or will power to pull themselves out of poverty?"]},
+                                                    {"cols": ["<b>Survey Question Asked:</b><br />Do you agree or disagree with the statement: It's really a matter of some people not trying hard enough; if blacks would only try harder they could be just as well off as white."]},
+                                                    {"cols": ["<b>Survey Question Asked:</b><br />Do you agree or disagree with the statement: Irish, Italians, Jewish and many other minorities overcame prejudice and worked their way up. Blacks should do the same without any special favors."]}
                                                 ]
                                         }
                                 }
