--- a/Manza/Other/IN_11.5.5a.html
+++ b/Manza/Other/IN_11.5.5a.html
@@ -76,7 +76,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "In 1910, 89 percent of the U.S. population consisted of non-Hispanic whites. Explore this map of the United States to see where the highest concentration of non-Hispanic whites were located at this time.<br><br><br><br>" }
+                                                                                "value": { "type": "constant", "value": "In 1910, 89 percent of the U.S. population consisted of non-Hispanic whites. Explore this map of the United States to see where the highest concentration of non-Hispanic whites were located at this time.<br /><br /><br /><br />" }
                                                                             },
                                                                             {
                                                                                 "name": "selectorLabel",
