--- a/Manza/Other/IN_11.5.6.html
+++ b/Manza/Other/IN_11.5.6.html
@@ -44,7 +44,7 @@
 										{
 											"id": "img1",
 											"actualSize": { "height": 379, "width": 570 },
-											"caption":  "The 1810 census listed the following categories: Free White Males; Free White Females; All Other Free Persons, Except Indians Not Taxed; Slaves <br> &nbsp; <br> &nbsp;<br> &nbsp;<br> <br>",
+											"caption":  "The 1810 census listed the following categories: Free White Males; Free White Females; All Other Free Persons, Except Indians Not Taxed; Slaves <br /> <br /><br /> ",
 											"captionPosition": "below"
 										},
 									"configFixup":
