--- a/Manza/Other/IN_11.5.7.html
+++ b/Manza/Other/IN_11.5.7.html
@@ -44,7 +44,7 @@
 										{
 											"id": "img1",
 											"actualSize": { "height": 379, "width": 570 },
-											"caption":  "The rate of interracial marriage overall has grown considerably in recent years, although faster between some racial and ethnic groups than others.<br> <br> <br>",
+											"caption":  "The rate of interracial marriage overall has grown considerably in recent years, although faster between some racial and ethnic groups than others.<br /> <br /> <br />",
 											"captionPosition": "below"
 										},
 									"configFixup":
