--- a/Manza/Other/IN_11.2.4a.html
+++ b/Manza/Other/IN_11.2.4a.html
@@ -34,7 +34,7 @@
 				[
 					{
 						"description": "Photo carousel includes photos of a Norwegian person, an Italian person, a Nigerian person, an Ethiopian person, an Indian person, and a Korean person",
-						"containerId": "imgContainer",
+						"containerId": "bbf82730c109748b4b39a4280af3bbe1c",
 						"brixConfig":
 							[
 								{
