--- a/Manza/Other/IN_11.5.2.html
+++ b/Manza/Other/IN_11.5.2.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="b3751e68bff4c4b8d97727b873683e1c9"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -34,7 +34,7 @@
 				[
 					{
 						"description": "Container for the ImageViewer bric",
-						"containerId": "imgContainer",
+						"containerId": "b3751e68bff4c4b8d97727b873683e1c9",
 						"brixConfig":
 							[
 								{
@@ -249,7 +249,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#b3751e68bff4c4b8d97727b873683e1c9"
 													}
 											}
 										]
