--- a/Manza/Other/IN_11.5.5a.html
+++ b/Manza/Other/IN_11.5.5a.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="bc13c498f2c12482a8fbb0ea343d2e305"></div>
+    <div id="b505755410bd34a3b90183598b39d6a55"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -35,7 +35,7 @@
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "imgContainer",
+                        "containerId": "b505755410bd34a3b90183598b39d6a55",
                         "brixConfig":
                             [
                                 {
@@ -156,7 +156,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#bc13c498f2c12482a8fbb0ea343d2e305"
+                                                        "selector": "#b505755410bd34a3b90183598b39d6a55"
                                                     }
                                             }
                                         ]
