--- a/Manza/Other/IN_11.5.6.html
+++ b/Manza/Other/IN_11.5.6.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b8e5d57f829c34e4785a88658ec794b80"></div>
+    <div id="b978828fb060a4ef693c7a53a9726a69a"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -34,7 +34,7 @@
 				[
 					{
 						"description": "Container for the ImageViewer bric",
-						"containerId": "imgContainer",
+						"containerId": "b978828fb060a4ef693c7a53a9726a69a",
 						"brixConfig":
 							[
 								{
@@ -162,7 +162,7 @@
 												"value":
 													{
 														"type": "d3select",
-														"selector": "#b8e5d57f829c34e4785a88658ec794b80"
+														"selector": "#b978828fb060a4ef693c7a53a9726a69a"
 													}
 											}
 										]
