--- a/Manza/Other/IN_11.1.5.html
+++ b/Manza/Other/IN_11.1.5.html
@@ -34,7 +34,7 @@
 				[
 					{
 						"description": "Container for the ImageViewer bric",
-						"containerId": "imgContainer",
+						"containerId": "be657869f38d44501b03bb93cd15faf6e",
 						"brixConfig":
 							[
 								{
